kubernetes-networks/canary/web-svc-cip-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc-cip-v2
spec:
  selector:
    app: web-v2
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
