kubernetes-networks/canary/canary-web.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-web-canary
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "ver"
    nginx.ingress.kubernetes.io/canary-by-header-value: "v2" 
spec:
  ingressClassName: nginx-default
  rules:
  - http:
    paths:
    - path: /web
      backend:
        serviceName: web-svc-cip-v2
        servicePort: 8000
