kubernetes-networks/canary/ingress-web.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-default
  rules:
  - http:
    paths:
    - path: /web
      backend:
        serviceName: web-svc-cip
        servicePort: 8000
